--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                 <img src="img/icon/phone.svg" alt="Email me at:" class="svg">
               </div>
               <div class="col-9">
-                <h4>Phone num.</h4>
+                <h4>Phone number</h4>
                 <a class="cont mt-0" href="tel:+358 40 157 3006">+358 40 157 3006</a>
               </div>
             </div>
