--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p id="about">Metropolia Univercity 2nd year IT student, Engineer, Developer</p>
           </div>
           <div class="col-lg-4">
-            <img src="img/danil.jpg" alt="danil" class="hlava rounded-circle mx-auto d-block">
+            <img src="img/danil.jpg" alt="danil" class="img-thumbnail">
           </div>
         </div>
         <section class="row">
