--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 Networking technologies as my major.
                 Now, I am second-year student of Bachelors degree in Metropolia University of Applied Sciences.
                  The main fields of studies are Smart Systems and IoT, 
-                 however the most essential knowledge like software development on C++ and Network and Network Development which 
+                 however the most essential knowledge like software development on C++, Java and Network and Network Development which 
                  I got from external qualified resources like (Edx, Codewars, Udemy and Stepik). 
 
               </p>
@@ -119,7 +119,7 @@
                           <p>
                           <li>Orientstion (Web development)</li>
                           <li>Smart devices (Robots on C)</li>
-                          <li>Mobiles (Android Project)</li>
+                          <li>Mobiles (Android Project JAVAf)</li>
                           <li>Linux and Networks(Cisco and Linux commands)</li>
                           </p>
                         </ul>
@@ -230,7 +230,16 @@
                       </div>
                       <div class="col-lg-9 progress my-auto progbars">
                         <div class="progress-bar bg-dark progress-bar-striped progress-bar-animated" role="progressbar"
-                          style="width: 60%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                          style="width: 70%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                    </div>
+                     <div class="row pt-2">
+                      <div class="col-lg-3">
+                        <h5>JAVA(OOP)</h5>
+                      </div>
+                      <div class="col-lg-9 progress my-auto progbars">
+                        <div class="progress-bar bg-dark progress-bar-striped progress-bar-animated" role="progressbar"
+                          style="width: 65%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
                     </div>
                     <div class="row pt-2">
