--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
             </div>
             <div class="col-9">
               <h4>Github</h4>
-              <a class="cont mt-0" href="https://github.com/danils2000/My_Projects">GitHub link</a>
+              <a class="cont mt-0" href="https://github.com/danils2000">GitHub link</a>
             </div>
         </section>
 
