--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
                   <div class="col-md-10">
                     <h4>Information Technologies</h4>
                     <h5>Metropolia UAS, Finland</h5>
+                    <h5>Specialization:</h5>
+                    <a class="cont mt-0" href="https://opinto-opas.metropolia.fi/en/88094/en/70331/TXL20S1/2164/year/2020">Professional Major Smart Systems</a>                    
                     <div class="row">
                       <div class="col-md-6">
                         <ul>
@@ -129,6 +131,7 @@
                           <p id="self">
                           <li>Finnish for Foreigners 1</li>
                           <li>Finnish for Foreigners 2</li>
+                          <li>Basics of Smart IoT Systems</li>
                           </p>
                         </ul>
                       </div>
@@ -175,6 +178,9 @@
                   <li>Advance C++ (Edx)</li>
                   <p></p>
                   <li>Introduction to Databases and SQL Querying (Udemy)</li>
+                  <p></p>
+                  <li>JAVA Tutorial for Complete Beginners (Udemy)</li>
+                  <p></p>
                   <p id="skills"></p>
                   </p>
                 </ul>
