--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                   <div class="col-md-10">
                     <h4>Information Technologies</h4>
                     <h5>Metropolia UAS, Finland</h5>
-                    <h5>Specialization:</h5>
+                    <h5>Specialization: <h5>
                     <a class="cont mt-0" href="https://opinto-opas.metropolia.fi/en/88094/en/70331/TXL20S1/2164/year/2020">Professional Major Smart Systems</a>                    
                     <div class="row">
                       <div class="col-md-6">
