--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="row justify-content-around pb-5 pt-5">
           <div class="col-md-3 my-auto">
             <h1 class="big">Danil Sisov</h1>
-            <p id="about">Metropolia Univercity 2nd year IT student, Engineer, Developer</p>
+            <p id="about">Metropolia Univercity 2nd year IT student, Engineer, Developer.</p>
           </div>
           <div class="col-lg-4">
             <img src="img/danil.jpg" alt="danil" class="img-thumbnail">
