--- a/index.html
+++ b/index.html
@@ -84,10 +84,11 @@
             <div>
             <p></p>
               <h5>Nokia ATG Coding and Machine learning Trainee</h5>
-              <h5>Oct 2020 - May 2021</h5>
+              <h5>Nov 2020 - May 2021</h5>
               <small>Espoo, Finland</small>
               <p class="paragraphs">  
-              Intern at Nokia 
+                Full time intern at Nokia. Working with programming languages as an example Python, JavaScript, React js. Working with Docker and Kubernetes.
+                Working with frameworks namely Three.js and Mapbox GL JS 
               </p>
             </div>
           </div>
@@ -101,8 +102,8 @@
               <div class="col-md-6">
                 <ul>
                   <li>Coding</li>
-                  <li>Map Demo</li>
-                  <li>Cloud</li>
+                  <li>Map framworks</li>
+                  <li>Software</li>
                 </ul>
                 <p id="education"?>
               </div>
@@ -139,43 +140,66 @@
 
         <div class="row justify-content-center">
           <div class="col-md-9">
-            <ul class="blocks">
-              <li class="schoolrecord">
-                <div class="row">
-                  <div class="col-md-2">
-                    <time>2019-2023</time>
-                  </div>
-                  <div class="col-md-10">
-                    <h4>Information Technologies</h4>
-                    <h5>Metropolia UAS, Finland</h5>
-                    <h5>Specialization: </h5> <a class="cont mt-0" href="https://opinto-opas.metropolia.fi/en/88094/en/70331/TXL20S1/2164/year/2020">Professional Major Smart Systems</a>                    
-                    <div class="row">
-                      <div class="col-md-6">
-                        <ul>
-                          <p>
-                          <li>Orientstion (Web development)</li>
-                          <li>Smart devices (Robots on C)</li>
-                          <li>Mobiles (Android Project JAVAf)</li>
-                          <li>Linux and Networks(Cisco and Linux commands)</li>
-                          </p>
-                        </ul>
+              <ul class="blocks">
+                  <li class="schoolrecord">
+                      <div class="row">
+                          <div class="col-md-2">
+                              <time>2019-2023</time>
+                          </div>
+                          <div class="col-md-10">
+                              <h4>Information Technologies</h4>
+                              <h5>Metropolia UAS, Finland</h5>
+                              <h5>Specialization: </h5> <a class="cont mt-0" href="https://opinto-opas.metropolia.fi/en/88094/en/70331/TXL20S1/2164/year/2020">Professional Major Smart Systems (clickable)</a>
+                              <div class="row">
+                                  <div class="col-md-6">
+                                      <ul>
+                                          <p>
+                                              <li>Courses completed: 8 </li>
+                                          </p>
+                                      </ul>
+                                  </div>
+                                  <div class="col-md-6">
+                                      <ul>
+                                          <p>
+                                          <li>Total credits: 115</li>
+                                          </p>
+                                      </ul>
+                                  </div>
+                              </div>
+                          </div>
                       </div>
-                      <div class="col-md-6">
-                        <ul>
-                          <p id="self">
-                          <li>Finnish for Foreigners 1</li>
-                          <li>Finnish for Foreigners 2</li>
-                          <li>Basics of Smart IoT Systems</li>
-                          </p>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-            </ul>
+                  </li>
+              </ul>
           </div>
-        </div>
+      </div>
+
+      <div class="row justify-content-center">
+          <div class="col-md-9">
+              <ul class="blocks">
+                  <li class="schoolrecord">
+                      <div class="row">
+                          <div class="col-md-2">
+                              <time>2016-2019</time>
+                          </div>
+                          <div class="col-md-10">
+                              <h5>Sillamae Gymnasium, Estonia</h5>
+                              <h5>Specialization: </h5> <a class="cont mt-0"> Mathematics, physics, computer science</a>
+                              <div class="row ">
+                                  <div class="col-md-6 ">
+                                      <ul>
+                                          <p>
+                                              <li>Average score: 4.3</li>
+                                          </p>
+                                      </ul>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </li>
+              </ul>
+          </div>
+      </div>
+      
         <section class="row">
           <div class="col-md-3">
             <h2>SELF STUDY</h2>
@@ -222,6 +246,7 @@
                           <li>JAVA Tutorial for Complete Beginners (Udemy)</li>
                           </p>
                         </ul>
+                        <p id="skills">
                       </div>
                     </div>
             </div>
