--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <ul>
                   <li>Coding</li>
                   <li>Map framworks</li>
-                  <li>Software</li>
+                  <li>Software development</li>
                 </ul>
                 <p id="education"?>
               </div>
