--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <div class="col-md-6">
                 <ul>
                   <li>Coding</li>
-                  <li>Map framworks</li>
+                  <li>Map frameworks</li>
                   <li>Software development</li>
                 </ul>
                 <p id="education"?>
