--- a/index.html
+++ b/index.html
@@ -554,7 +554,8 @@
               </div>
               <div class="col-9">
                 <h4>My location</h4>
-                <a class="cont mt-0" href="https://www.google.fi/maps/place/vantaa/@60.3192356,24.8297068,11z/data=!3m1!4b1!4m5!3m4!1s0x469207b83a3845b5:0xe2b7cd7632a1804f!8m2!3d60.2933524!4d25.0377686">Vantaa</a>
+                <a class="cont mt-0" href="https://www.google.fi/maps/place/vantaa/@60.3192356,24.8297068,11z/data=!3m1!4b1!4m5!3m4!1s0x469207b83a3845b5:0xe2b7cd7632a1804f!8m2!3d60.2933524!4d25.0377686">Kylmäojantie 4, Vantaa, Finland.
+ </a>
               </div>
             </div>
           </div>
