--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
                                           <p>
                                               <li>Courses completed: 8 </li>
                                           </p>
+                                        <p>
+                                          <li>Avarage score: 4.0 </li>
+                                        </p>
                                       </ul>
                                   </div>
                                   <div class="col-md-6">
