--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <h5>Nov 2020 - May 2021</h5>
               <small>Espoo, Finland</small>
               <p class="paragraphs">  
-                Full time intern at Nokia. Working with programming languages as an example Python, JavaScript, React js. Working with Docker and Kubernetes.
+                Full time intern at Nokia. Working with programming languages as an example Python, JavaScript, React js. Operating with Docker and Kubernetes.
                 Working with frameworks namely Three.js and Mapbox GL JS 
               </p>
             </div>
